--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<section>
 		<h1>I am learning Git with Skillcrush</h1>
+		<h3>New change</h3>
 		<p>I love learning Web Development <3</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
